# minibasic

./: .gitignore  CMakeLists.txt  Makefile  README.html  README.md  ast.cpp  lexer.l  parser.y
tests/: a.ll  a.s  do.sh
